@@ -17,11 +17,12 @@ PostGIS 1.1.0CVS
 
 PostGIS 1.0.3
 ????/??/??
-	- Severe bugfix in lwgeom's 2d bounding box computation
+	- Bugfix in WKT (-w) POINT handling in loader
 	- Bugfix in dumper on 64bit machines
 	- Bugfix in dumper handling of user-defined queries 
 	- Bugfix in create_undef.pl script
 	- Small performance improvement in canonical input function
+	- Severe bugfix in lwgeom's 2d bounding box computation
 
 PostGIS 1.0.2
 2005/07/04
